Got the static height perfect, tricon dialpad no longer jumps

--- a/app/styles/_merchantpanel.scss
+++ b/app/styles/_merchantpanel.scss
@@ -84,6 +84,7 @@
 
     display: inline-block;
     float: left;
+    margin-left: 10px;
 }
 
 .locationButtonRight {
@@ -91,6 +92,7 @@
 
     display: inline-block;
     float: right;
+    margin-right: 10px;
 }
 
 .locationContainer {
@@ -133,7 +135,7 @@
 .confirmCode {
     @extend .locationTriconContainer;
 
-    height: 70px !important;
+    height: 65px;
     display: inline-flex;
 
     .locationTricon {
@@ -141,12 +143,7 @@
         zoom: 0.65;
         -moz-transform: scale(0.65);
         -moz-transform-origin: 0 0;
-        margin-bottom: 0px;
-        margin-top: 0px;
     }
-
-    margin-bottom: 0px;
-    margin-top: 0px;
 }
 
 /**
